--- a/app/views/foods/show.html.erb
+++ b/app/views/foods/show.html.erb
@@ -8,10 +8,21 @@
   <p>【コメント】</p>
   <%= simple_format(h(@food.comment)) %>
   <p>
+  <p id="food-<%= @food.id %>">
+  <% if @food.liked_by?(current_user) %>
+    <%# 「いいね！」済み %>
+    <%= render "like", food: @food %>
+  <% else %>
+    <%# 「いいね」していない %>
+    <%= render "dislike", food: @food %>
+  <% end %>
+
+</p>
   <% if current_user.id == @food.user_id %>
+  <p>
     <%= link_to "編集", edit_food_path(@food) %>
     <%= link_to "削除", food_path(@food), method: :delete, data: { confirm: "削除しますか？" } %>
-    <% end %>
   </p>
+  <% end %>
   <p><%= link_to "投稿一覧へ", foods_path %></p>
 </div>
